--- a/index.html
+++ b/index.html
@@ -6,133 +6,49 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-:root {
-  --bg:#0b1020;
-  --card:#111a33;
-  --line:#23305a;
-  --text:#eaf0ff;
-  --muted:#9aa7c2;
-  --accent:#38bdf8;
-  --danger:#fb7185;
+:root{
+  --bg:#0b1020;--card:#111a33;--line:#23305a;
+  --text:#eaf0ff;--muted:#9aa7c2;--accent:#38bdf8;--danger:#fb7185;
 }
-
-* { box-sizing:border-box; }
-
-body {
-  margin:0;
-  background:linear-gradient(180deg,#0b1020,#05070d);
-  font-family:"Pretendard","Noto Sans KR",system-ui,Arial,sans-serif;
-  color:var(--text);
+*{box-sizing:border-box}
+body{
+  margin:0;background:linear-gradient(180deg,#0b1020,#05070d);
+  font-family:Pretendard,"Noto Sans KR",system-ui;color:var(--text)
 }
-
-.wrapper {
-  max-width:900px;
-  margin:auto;
-  padding:32px 16px 80px;
+.wrapper{max-width:900px;margin:auto;padding:32px 16px 80px}
+header h1{margin:0;font-size:26px}
+header p{margin:8px 0 24px;color:var(--muted);font-size:14px}
+.search-box{display:flex;gap:10px;flex-wrap:wrap}
+.search-box input{
+  flex:1;min-width:240px;padding:14px 16px;border-radius:12px;
+  border:1px solid var(--line);background:#070a14;color:var(--text);font-size:16px
 }
-
-header h1 {
-  margin:0;
-  font-size:26px;
+.search-box button{
+  padding:14px 18px;border-radius:12px;border:1px solid var(--accent);
+  background:rgba(56,189,248,.15);color:var(--text);font-weight:700;cursor:pointer
 }
-
-header p {
-  margin:8px 0 24px;
-  color:var(--muted);
-  font-size:14px;
+.search-box button.reset{border-color:#374151;background:#1f2937}
+.result-area{margin-top:28px}
+.card{
+  background:var(--card);border:1px solid var(--line);
+  border-radius:18px;padding:18px;margin-bottom:16px
 }
-
-.search-box {
-  display:flex;
-  gap:10px;
-  flex-wrap:wrap;
+.card h2{margin:0 0 14px;font-size:16px;display:flex;gap:8px;align-items:center}
+.tag{
+  font-size:11px;padding:4px 10px;border-radius:999px;
+  border:1px solid var(--accent);color:var(--accent)
 }
-
-.search-box input {
-  flex:1;
-  min-width:240px;
-  padding:14px 16px;
-  border-radius:12px;
-  border:1px solid var(--line);
-  background:#070a14;
-  color:var(--text);
-  font-size:16px;
+.row{
+  display:grid;grid-template-columns:170px 1fr;
+  gap:8px 12px;margin-bottom:10px;font-size:14px
 }
-
-.search-box button {
-  padding:14px 18px;
-  border-radius:12px;
-  border:1px solid var(--accent);
-  background:rgba(56,189,248,.15);
-  color:var(--text);
-  font-weight:700;
-  cursor:pointer;
+.label{color:var(--muted)}
+.value{white-space:pre-wrap;word-break:break-word}
+.empty{
+  padding:20px;border-radius:14px;border:1px dashed var(--line);
+  color:var(--danger);font-size:14px
 }
-
-.search-box button.reset {
-  border-color:#374151;
-  background:#1f2937;
-}
-
-.notice {
-  margin-top:14px;
-  font-size:13px;
-  color:var(--muted);
-}
-
-.result-area {
-  margin-top:28px;
-}
-
-.card {
-  background:var(--card);
-  border:1px solid var(--line);
-  border-radius:18px;
-  padding:18px;
-  margin-bottom:16px;
-}
-
-.card h2 {
-  margin:0 0 14px;
-  font-size:16px;
-  display:flex;
-  gap:8px;
-  align-items:center;
-}
-
-.tag {
-  font-size:11px;
-  padding:4px 10px;
-  border-radius:999px;
-  border:1px solid var(--accent);
-  color:var(--accent);
-}
-
-.row {
-  display:grid;
-  grid-template-columns:170px 1fr;
-  gap:8px 12px;
-  margin-bottom:10px;
-  font-size:14px;
-}
-
-.label { color:var(--muted); }
-.value { white-space:pre-wrap; word-break:break-word; }
-
-.empty {
-  padding:20px;
-  border-radius:14px;
-  border:1px dashed var(--line);
-  color:var(--danger);
-  font-size:14px;
-}
-
-footer {
-  margin-top:40px;
-  font-size:12px;
-  color:var(--muted);
-  text-align:center;
-}
+footer{margin-top:40px;font-size:12px;color:var(--muted);text-align:center}
 </style>
 </head>
 
@@ -141,20 +57,16 @@ footer {
 
 <header>
   <h1>시리얼 넘버 검색기 (Serial Number Search)</h1>
-  <p>
-    구형 / 신형 시트를 통합 검색합니다.<br>
-    Search across legacy and current sheets.
-  </p>
+  <p>구형 / 신형 시트를 통합 검색합니다.</p>
 </header>
 
 <section class="search-box">
-  <input id="serialInput" placeholder="예: DM222510125">
+  <input id="serialInput" placeholder="예: DM222510138">
   <button onclick="search()">검색</button>
   <button class="reset" onclick="resetForm()">초기화</button>
 </section>
 
 <section id="result" class="result-area"></section>
-
 <footer>© SEDNAENG</footer>
 </div>
 
@@ -165,85 +77,102 @@ const SHEETS = ["구형","신형"];
 const GRADE_SHEET = "성적서";
 
 const COL = {
-  company: 3,
-  wp: 5,
-  delivery: 7,
-  model: 9,
-  project: 11,
-  serial: 17
+  company: 3,   // D
+  wp: 5,        // F
+  delivery: 7,  // H
+  model: 9,     // J
+  project: 11,  // L
+  serial: 17    // R
 };
-const K_INDEX = 10;
+const K_INDEX = 10; // K
 
 /* ===== 유틸 ===== */
 function buildKey(raw){
   if(!raw) return "";
   let v = raw.toUpperCase().replace(/\s+/g,"");
-  let out = "";
+  let out="";
   for(let i=0;i<v.length;i++){
-    const pos=i+1, ch=v[i];
+    const pos=i+1,ch=v[i];
     if((pos===4||pos===5)&&/[A-Z]/.test(ch)) continue;
     out+=ch;
   }
   return out;
 }
 
-/* ===== 성적서 맵 ===== */
+/* ===== 성적서 맵 (C=시리얼, L=주소) ===== */
 async function loadGradeMap(){
-  const url=`https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(GRADE_SHEET)}&tqx=out:json`;
-  const txt=await fetch(url).then(r=>r.text());
-  const json=JSON.parse(txt.substring(txt.indexOf("{"),txt.lastIndexOf("}")+1));
-  const rows=json.table.rows||[];
-  const map=new Map();
+  const url =
+    `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(GRADE_SHEET)}&tqx=out:json`;
+  const txt  = await fetch(url).then(r=>r.text());
+  const json = JSON.parse(txt.substring(txt.indexOf("{"), txt.lastIndexOf("}") + 1));
+  const rows = json.table.rows || [];
+
+  const map = new Map();
 
   rows.forEach(r=>{
-    const row=r.c.map(c=>c?c.v:"");
-    const serials=(row[2]||"").toString().split(",").map(buildKey);
-    const url=row[3];
-    serials.forEach(s=>{ if(s && url) map.set(s,url); });
+    const row = r.c.map(c=>c?c.v:"");
+
+    const serials = (row[2] || "")
+      .toString()
+      .split(/,|\n/)
+      .map(s=>buildKey(s))
+      .filter(Boolean);
+
+    const url = row[11]; // L열
+
+    serials.forEach(s=>{
+      if(s && url) map.set(s, url);
+    });
   });
+
   return map;
 }
 
 /* ===== 검색 ===== */
 async function search(){
-  const input=document.getElementById("serialInput").value;
-  const box=document.getElementById("result");
-  box.innerHTML="";
+  const input = document.getElementById("serialInput").value;
+  const box = document.getElementById("result");
+  box.innerHTML = "";
 
-  const key=buildKey(input);
+  const key = buildKey(input);
   if(!key){
-    box.innerHTML=`<div class="empty">시리얼 입력 필요</div>`;
+    box.innerHTML = `<div class="empty">시리얼 입력 필요</div>`;
     return;
   }
 
-  const gradeMap=await loadGradeMap();
-  let hits=[];
+  const gradeMap = await loadGradeMap();
+  let hits = [];
 
   for(const sheet of SHEETS){
-    const url=`https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${sheet}&tqx=out:json`;
-    const txt=await fetch(url).then(r=>r.text());
-    const json=JSON.parse(txt.substring(txt.indexOf("{"),txt.lastIndexOf("}")+1));
-    const rows=json.table.rows||[];
+    const url =
+      `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(sheet)}&tqx=out:json`;
+    const txt  = await fetch(url).then(r=>r.text());
+    const json = JSON.parse(txt.substring(txt.indexOf("{"), txt.lastIndexOf("}") + 1));
+    const rows = json.table.rows || [];
 
     rows.forEach(r=>{
-      const row=r.c.map(c=>c?c.v:"");
-      const serials=(row[COL.serial]||"").toString().split(",").map(buildKey);
+      const row = r.c.map(c=>c?c.v:"");
+      const serials = (row[COL.serial]||"")
+        .toString()
+        .split(",")
+        .map(s=>buildKey(s));
+
       serials.forEach(s=>{
-        if(s===key){
-          hits.push({sheet,row,matchedSerial:s});
-        }
+        if(s===key) hits.push({sheet,row,matchedSerial:s});
       });
     });
   }
 
   if(!hits.length){
-    box.innerHTML=`<div class="empty">검색 결과 없음</div>`;
+    box.innerHTML = `<div class="empty">검색 결과 없음</div>`;
     return;
   }
 
   hits.forEach(hit=>{
-    const gUrl=gradeMap.get(hit.matchedSerial)||"";
-    box.innerHTML+=`
+    const gUrl = gradeMap.get(hit.matchedSerial) || "";
+    const isFolder = gUrl.includes("/drive/folders/");
+
+    box.innerHTML += `
     <div class="card">
       <h2>🔎 검색 결과 <span class="tag">${hit.sheet}</span></h2>
 
@@ -258,7 +187,9 @@ async function search(){
         <div class="label">성적서</div>
         <div class="value">
           ${gUrl
-            ? `<a href="${gUrl}" target="_blank">${hit.matchedSerial} 성적서 다운로드</a>`
+            ? `<a href="${gUrl}" target="_blank">
+                 ${hit.matchedSerial} ${isFolder ? "성적서 폴더 열기" : "성적서 다운로드"}
+               </a>`
             : `${hit.matchedSerial} 미등록`
           }
         </div>
