--- a/index.html
+++ b/index.html
@@ -2,170 +2,218 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>시리얼 넘버 검색기 | Serial Number Search</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<title>시리얼 넘버 검색기 | Serial Number Search</title>
 <style>
 :root{
-  --bg:#0b1020;--card:#111a33;--line:#23305a;
-  --text:#eaf0ff;--muted:#9aa7c2;--accent:#38bdf8;--danger:#fb7185;
+  --bg:#0b1020; --card:#111a33; --line:#23305a;
+  --text:#eaf0ff; --muted:#9aa7c2; --accent:#38bdf8; --danger:#fb7185;
 }
 *{box-sizing:border-box}
-body{
-  margin:0;
-  background:linear-gradient(180deg,#0b1020,#05070d);
-  font-family:Pretendard,"Noto Sans KR",system-ui;
-  color:var(--text);
-}
-.wrapper{max-width:900px;margin:auto;padding:32px 16px 80px}
-header h1{margin:0;font-size:26px}
-header p{margin:8px 0 24px;color:var(--muted);font-size:14px}
+body{margin:0; background:linear-gradient(180deg,#0b1020,#05070d); font-family:Pretendard,"Noto Sans KR",system-ui; color:var(--text)}
+.wrapper{max-width:1200px; margin:auto; padding:32px 16px 80px}
 
-.search-box{display:flex;gap:10px;flex-wrap:wrap}
+/* 헤더 */
+header{margin-bottom:32px; border-bottom:1px solid var(--line); padding-bottom:24px}
+header h1{margin:0; font-size:28px; display:flex; align-items:center; gap:12px}
+header .logo{width:40px; height:40px; background:var(--accent); border-radius:8px}
+header p{margin:8px 0 0; color:var(--muted); font-size:14px}
+
+/* 검색 박스 */
+.search-box{
+  background:var(--card); border:1px solid var(--line); border-radius:16px;
+  padding:24px; margin-bottom:32px; display:flex; gap:12px; flex-wrap:wrap;
+  align-items:center;
+}
 .search-box input{
-  flex:1;min-width:240px;padding:14px 16px;border-radius:12px;
-  border:1px solid var(--line);background:#070a14;color:var(--text);font-size:16px
+  flex:1; min-width:300px; padding:12px 16px; border-radius:10px;
+  border:1px solid var(--line); background:#070a14; color:var(--text); font-size:15px;
 }
+.search-box input:focus{outline:none; border-color:var(--accent); box-shadow:0 0 0 3px rgba(56,189,248,0.4)}
 .search-box button{
-  padding:14px 18px;border-radius:12px;border:1px solid var(--accent);
-  background:rgba(56,189,248,.15);color:var(--text);font-weight:700;cursor:pointer
+  padding:12px 20px; border-radius:10px; border:none;
+  font-weight:700; cursor:pointer; transition:all 150ms; font-size:14px;
 }
-.search-box button.reset{border-color:#374151;background:#1f2937}
+.search-box .btn-search{
+  background:var(--accent); color:#000; min-width:100px;
+}
+.search-box .btn-search:hover{background:#60d5ff; transform:translateY(-2px)}
+.search-box .btn-reset{
+  background:var(--line); color:var(--text); min-width:80px;
+}
+.search-box .btn-reset:hover{background:#2d3f5d}
 
-.result-area{margin-top:28px}
+/* 결과 영역 */
+.result-area{margin-top:24px}
+.result-grid{
+  display:grid; grid-template-columns:repeat(2, 1fr); gap:20px;
+}
+
+/* 결과 카드 (2열) */
 .card{
-  background:var(--card);border:1px solid var(--line);
-  border-radius:18px;padding:18px;margin-bottom:16px
+  background:var(--card); border:1px solid var(--line); border-radius:14px;
+  padding:20px; display:flex; flex-direction:column; gap:16px;
 }
-.card h2{margin:0 0 14px;font-size:16px;display:flex;gap:8px;align-items:center}
+.card-header{
+  display:flex; align-items:center; gap:12px; padding-bottom:16px;
+  border-bottom:1px solid var(--line);
+}
+.card-title{margin:0; font-size:16px; font-weight:600; color:var(--accent)}
 .tag{
-  font-size:11px;padding:4px 10px;border-radius:999px;
-  border:1px solid var(--accent);color:var(--accent)
+  font-size:11px; padding:4px 10px; border-radius:6px;
+  background:rgba(56,189,248,0.15); color:var(--accent); border:1px solid var(--accent);
 }
-.row{
-  display:grid;grid-template-columns:170px 1fr;
-  gap:8px 12px;margin-bottom:10px;font-size:14px
+
+/* 정보 그룹 (카드 내부 2열) */
+.info-grid{
+  display:grid; grid-template-columns:1fr 1fr; gap:12px;
 }
-.label{color:var(--muted)}
-.value{white-space:pre-wrap;word-break:break-word}
+.info-item{
+  background:rgba(7,10,20,0.5); border:1px solid var(--line); border-radius:10px;
+  padding:12px; display:flex; flex-direction:column; gap:6px;
+}
+.info-label{
+  font-size:12px; color:var(--muted); font-weight:500; text-transform:uppercase;
+  letter-spacing:0.5px;
+}
+.info-value{
+  font-size:14px; color:var(--text); font-weight:500; word-break:break-word;
+  white-space:normal; line-height:1.4;
+}
+
+/* 성적서 (전체 폭) */
+.cert-section{
+  background:rgba(7,10,20,0.5); border:1px solid var(--line); border-radius:10px;
+  padding:12px; grid-column:1/-1;
+}
+.cert-label{
+  font-size:12px; color:var(--muted); font-weight:500; margin-bottom:8px;
+}
+.cert-btn{
+  display:inline-flex; align-items:center; gap:8px;
+  padding:10px 16px; background:var(--accent); color:#000;
+  border-radius:8px; text-decoration:none; font-weight:600;
+  cursor:pointer; border:none; font-size:14px; transition:all 150ms;
+}
+.cert-btn:hover{background:#60d5ff; transform:translateY(-2px)}
+.cert-text{color:var(--muted); font-size:13px}
+
+/* 빈 결과 */
 .empty{
-  padding:20px;border-radius:14px;border:1px dashed var(--line);
-  color:var(--danger);font-size:14px
+  padding:40px 20px; text-align:center;
+  border:2px dashed var(--line); border-radius:12px;
+  color:var(--danger); font-size:15px;
 }
-footer{margin-top:40px;font-size:12px;color:var(--muted);text-align:center}
+
+/* 푸터 */
+footer{margin-top:48px; padding-top:24px; border-top:1px solid var(--line);
+  text-align:center; font-size:12px; color:var(--muted)}
+
+/* 한글/영문 폰트 크기 */
+.eng{font-size:13px; opacity:0.75; margin-left:4px}
+
+/* 모바일 반응형 (768px 이하) */
+@media(max-width:768px){
+  .wrapper{padding:20px 12px 60px}
+  header h1{font-size:22px}
+  .search-box{
+    flex-direction:column; padding:16px;
+  }
+  .search-box input, .search-box button{width:100%}
+  
+  /* 모바일: 1열 레이아웃 */
+  .result-grid{
+    grid-template-columns:1fr; gap:16px;
+  }
+  
+  /* 모바일: 정보도 1열 */
+  .info-grid{
+    grid-template-columns:1fr; gap:10px;
+  }
+}
+
+/* 태블릿 (768px ~ 1024px) */
+@media(max-width:1024px){
+  .result-grid{gap:16px; padding:0 12px}
+  .info-grid{gap:10px}
+}
 </style>
 </head>
-
 <body>
 <div class="wrapper">
-
 <header>
-  <h1>시리얼 넘버 검색기 (Serial Number Search)</h1>
-  <p>구형 / 신형 시트를 통합 검색합니다.</p>
+  <h1>🔍 시리얼 넘버 검색기 <span class="eng">(Serial Number Search)</span></h1>
+  <p>구형/신형 시트를 통합 검색합니다. <span class="eng">(Unified search)</span></p>
 </header>
 
 <section class="search-box">
-  <input id="serialInput" placeholder="예: DM222510138">
-  <button onclick="search()">검색</button>
-  <button class="reset" onclick="resetForm()">초기화</button>
+  <input id="serialInput" placeholder="예: DM202510117">
+  <button class="btn-search" onclick="search()">검색 (Search)</button>
+  <button class="btn-reset" onclick="resetForm()">초기화 (Reset)</button>
 </section>
 
 <section id="result" class="result-area"></section>
-<footer>© SEDNAENG</footer>
 
+<footer>© SEDNAENG</footer>
 </div>
 
 <script>
-/* ================= 설정 ================= */
 const SPREADSHEET_ID = "1S6NfRpDYdBJgnfdweINyqVs_NQhZi-T2uOABSx_3JnU";
 const SHEETS = ["구형","신형"];
 const GRADE_SHEET = "성적서";
+const COL = {company:3, wp:5, delivery:7, model:9, project:11, serial:17};
+const K_INDEX = 10;
 
-const COL = {
-  company: 3,   // D
-  wp: 5,        // F
-  delivery: 7,  // H
-  model: 9,     // J
-  project: 11,  // L
-  serial: 17    // R
-};
-const K_INDEX = 10; // K
-
-/* ================= 유틸 ================= */
 function buildKey(raw){
   if(!raw) return "";
   let v = raw.toUpperCase().replace(/\s+/g,"");
-  let out="";
-  for(let i=0;i<v.length;i++){
-    const pos=i+1, ch=v[i];
-    if((pos===4||pos===5)&&/[A-Z]/.test(ch)) continue;
-    out+=ch;
+  let out = "";
+  for(let i=0; i<v.length; i++){
+    const ch = v[i];
+    if((i===3 || i===4) && /[A-Z]/.test(ch)) continue;
+    out += ch;
   }
   return out;
 }
 
-/* ================= 성적서 맵 ================= */
-/* 성적서 시트: C = 시리얼, L = 주소 */
 async function loadGradeMap(){
-  const url =
-    `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(GRADE_SHEET)}&tqx=out:json`;
-  const txt  = await fetch(url).then(r=>r.text());
-  const json = JSON.parse(txt.substring(txt.indexOf("{"), txt.lastIndexOf("}") + 1));
+  const url = `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(GRADE_SHEET)}&tqx=out:json`;
+  const txt = await fetch(url).then(r=>r.text());
+  const json = JSON.parse(txt.substring(txt.indexOf("{"), txt.lastIndexOf("}")+1));
   const rows = json.table.rows || [];
-
   const map = new Map();
-
   rows.forEach(r=>{
     const row = r.c.map(c=>c?c.v:"");
-
-    const serials = (row[2] || "")
-      .toString()
-      .split(/,|\n/)
-      .map(s => buildKey(s))
-      .filter(Boolean);
-
-    const rawUrl = row[11]; // L열
+    const serials = (row[2]||"").toString().split(/,|\n/).map(s=>buildKey(s)).filter(Boolean);
+    const rawUrl = row[11];
     if(!rawUrl) return;
-
     const cleanUrl = rawUrl.toString().trim();
-
     serials.forEach(s=>{
       if(s && cleanUrl) map.set(s, cleanUrl);
     });
   });
-
   return map;
 }
 
-/* ================= 검색 ================= */
 async function search(){
   const input = document.getElementById("serialInput").value;
   const box = document.getElementById("result");
   box.innerHTML = "";
-
   const key = buildKey(input);
   if(!key){
-    box.innerHTML = `<div class="empty">시리얼 입력 필요</div>`;
+    box.innerHTML = `<div class="empty">시리얼 입력 필요 <span class="eng">(Please enter serial number)</span></div>`;
     return;
   }
-
   const gradeMap = await loadGradeMap();
   let hits = [];
-
   for(const sheet of SHEETS){
-    const url =
-      `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(sheet)}&tqx=out:json`;
-    const txt  = await fetch(url).then(r=>r.text());
-    const json = JSON.parse(txt.substring(txt.indexOf("{"), txt.lastIndexOf("}") + 1));
+    const url = `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(sheet)}&tqx=out:json`;
+    const txt = await fetch(url).then(r=>r.text());
+    const json = JSON.parse(txt.substring(txt.indexOf("{"), txt.lastIndexOf("}")+1));
     const rows = json.table.rows || [];
-
     rows.forEach(r=>{
       const row = r.c.map(c=>c?c.v:"");
-      const serials = (row[COL.serial]||"")
-        .toString()
-        .split(",")
-        .map(s=>buildKey(s));
-
+      const serials = (row[COL.serial]||"").toString().split(",").map(s=>buildKey(s));
       serials.forEach(s=>{
         if(s === key){
           hits.push({sheet,row,matchedSerial:s});
@@ -173,42 +221,63 @@ async function search(){
       });
     });
   }
-
   if(!hits.length){
-    box.innerHTML = `<div class="empty">검색 결과 없음</div>`;
+    box.innerHTML = `<div class="empty">검색 결과 없음 <span class="eng">(No results found)</span></div>`;
     return;
   }
-
+  
+  let html = '<div class="result-grid">';
   hits.forEach(hit=>{
-    const gUrlRaw = gradeMap.get(hit.matchedSerial) || "";
-    const gUrl = gUrlRaw.toString().trim();
+    const gUrl = (gradeMap.get(hit.matchedSerial)||"").toString().trim();
     const isFolder = gUrl.includes("/drive/folders/");
-
-    box.innerHTML += `
+    const sheetTag = hit.sheet === "구형" ? "구형 (Old)" : "신형 (New)";
+    
+    html += `
     <div class="card">
-      <h2>🔎 검색 결과 <span class="tag">${hit.sheet}</span></h2>
-
-      <div class="row"><div class="label">업체명</div><div class="value">${hit.row[COL.company]||"-"}</div></div>
-      <div class="row"><div class="label">납품일</div><div class="value">${hit.row[COL.delivery]||"-"}</div></div>
-      <div class="row"><div class="label">W/P 납품일</div><div class="value">${hit.row[COL.wp]||"-"}</div></div>
-      <div class="row"><div class="label">모델명</div><div class="value">${hit.row[COL.model]||"-"}</div></div>
-      <div class="row"><div class="label">납기 수량</div><div class="value">${hit.row[K_INDEX]||"-"}</div></div>
-      <div class="row"><div class="label">프로젝트명</div><div class="value">${hit.row[COL.project]||"-"}</div></div>
-
-      <div class="row">
-        <div class="label">성적서</div>
-        <div class="value">
-          ${
-            gUrl
-              ? `<a href="${encodeURI(gUrl)}" target="_blank" rel="noopener noreferrer">
-                   ${hit.matchedSerial} ${isFolder ? "성적서 폴더 열기" : "성적서 다운로드"}
-                 </a>`
-              : `${hit.matchedSerial} 미등록`
-          }
+      <div class="card-header">
+        <div class="card-title">🔎 검색 결과 <span class="eng">(Result)</span></div>
+        <span class="tag">${sheetTag}</span>
+      </div>
+      <div class="info-grid">
+        <div class="info-item">
+          <div class="info-label">업체명 (Company)</div>
+          <div class="info-value">${hit.row[COL.company]||"-"}</div>
         </div>
+        <div class="info-item">
+          <div class="info-label">모델명 (Model)</div>
+          <div class="info-value">${hit.row[COL.model]||"-"}</div>
+        </div>
+        <div class="info-item">
+          <div class="info-label">납품일 (Delivery)</div>
+          <div class="info-value">${hit.row[COL.delivery]||"-"}</div>
+        </div>
+        <div class="info-item">
+          <div class="info-label">W/P 납품일 (WP Date)</div>
+          <div class="info-value">${hit.row[COL.wp]||"-"}</div>
+        </div>
+        <div class="info-item">
+          <div class="info-label">수량 (Qty)</div>
+          <div class="info-value">${hit.row[K_INDEX]||"-"}</div>
+        </div>
+        <div class="info-item">
+          <div class="info-label">프로젝트 (Project)</div>
+          <div class="info-value">${hit.row[COL.project]||"-"}</div>
+        </div>
+      </div>
+      <div class="cert-section">
+        <div class="cert-label">성적서 (Certificate)</div>
+        ${
+          gUrl 
+            ? `<a href="${encodeURI(gUrl)}" target="_blank" rel="noopener noreferrer" class="cert-btn">
+                 📥 ${isFolder ? '폴더 열기 (Open Folder)' : '다운로드 (Download)'}
+               </a>`
+            : `<span class="cert-text">미등록 (Not Registered)</span>`
+        }
       </div>
     </div>`;
   });
+  html += '</div>';
+  box.innerHTML = html;
 }
 
 function resetForm(){
@@ -216,20 +285,16 @@ function resetForm(){
   document.getElementById("result").innerHTML="";
 }
 
-/* ================= QR / URL 자동 검색 ================= */
-function getSerialFromQuery(){
-  const params = new URLSearchParams(window.location.search);
-  return params.get("sn");
-}
-
 window.addEventListener("load", ()=>{
-  const serial = getSerialFromQuery();
+  const params = new URLSearchParams(window.location.search);
+  const serial = params.get("sn");
   if(serial){
     document.getElementById("serialInput").value = serial;
     search();
   }
 });
 </script>
-
 </body>
 </html>
+
+
